--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ aclImdb_v1
 .vscode
 
 __pycache__
+
+# ignore glove, since the files are too large for github
+data/glove.6B.50d.txt
+data/6B.50_**.pkl
