Fix and extend bow classifying

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ __pycache__
 # ignore glove, since the files are too large for github
 data/glove.6B.50d.txt
 data/6B.50_**.pkl
+
+.ipynb_checkpoints/
